# Rooster

./: .env.example  .gitignore  README.md  TESTING.md  docker-compose.yml  main.py  models.py  pyproject.toml  walkthrough.md
client/: Dockerfile  build_output.txt  components.json  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  globals.css  index.css  main.jsx  theme.js
client/src/api/: apiClient.js
client/src/components/: ErrorBoundary.jsx  LoginButton.jsx  Navbar.jsx  ProfileSetup.jsx  theme-provider.jsx
client/src/components/feedback/: Skeletons.jsx
client/src/components/forms/: MajorCombobox.jsx
client/src/components/landing/: BentoGridFeatures.jsx  DemoCarousel.jsx  DemoClassDetail.jsx  DemoClassDetailPuppet.jsx  DemoDashboard.jsx  DemoDashboardPuppet.jsx  MobileDemoShowcase.jsx  PuppetCursor.jsx  ScrollFeatureSection.jsx
client/src/data/: demoData.js  majors.js
client/src/hooks/: use-command-palette.js  use-mouse-enter.js
client/src/lib/: action-context.js  roosterGame.js  utils.js
client/src/pages/: AuthCallback.jsx  ClassDetail.jsx  Dashboard.jsx  Home.jsx  Login.jsx  ProfileSetup.jsx
routes/: classrooms.py  grades.py  roster.py
server/: Dockerfile  gunicorn.conf.py  main.py  models.py  requirements-test.txt  requirements.txt  roster_sample.csv  utils.py
server/routes/: announcements.py  api.py  auth.py  classrooms.py  grades.py  roster.py
server/tests/: conftest.py  test_api.py  test_classrooms.py  test_grades.py  test_health.py
(+11 files in other folders)
