[project]
name = "starterproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
    "flask-mongoengine>=1.0.0",
    "mongoengine>=0.29.1",
]
